# Entity-Screening-Engine

./: Cargo.toml  README.md  diesel.toml
Diagrams/: Flow Diagram.drawio  Producer-Consumer-Arch Diagram.drawio  Services.drawio
migrations/2024-11-24-163033_init/: down.sql  up.sql
migrations/2024-11-25-200221_Add_job_table/: down.sql  up.sql
migrations/2024-11-25-204134_Add_check_job_map_table/: down.sql  up.sql
migrations/2024-11-29-201514_add/: down.sql  up.sql
migrations/2024-12-07-154539_add_officer_id_to_entity_table/: down.sql  up.sql
migrations/2024-12-08-014049_name_of_migration/: down.sql  up.sql
migrations/2024-12-15-140212_add_flags_and_datasets_tables/: down.sql  up.sql
migrations/2024-12-15-140854_add_positions_tables/: down.sql  up.sql
migrations/2024-12-16-123858_add_table_for_outlier_age/: down.sql  up.sql
migrations/2024-12-16-133448_add_company_dormant_table/: down.sql  up.sql
migrations/2024-12-18-150458_add_check_kind_field_to_check_table/: down.sql  up.sql
migrations/2024-12-18-150621_add_check_monitored_entity_table/: down.sql  up.sql
migrations/2024-12-18-150911_add_monitored_entity_table/: down.sql  up.sql
migrations/2024-12-18-155344_add_snapshot_table/: down.sql  up.sql
migrations/2024-12-18-155652_add_check_snapshot_table/: down.sql  up.sql
migrations/2024-12-18-155918_add_processed_update_table/: down.sql  up.sql
migrations/2024-12-18-161436_add_monitoring_span_table/: down.sql  up.sql
migrations/2024-12-18-161814_add_monitoring_span_id_to_monitored_entity_table/: down.sql  up.sql
migrations/2024-12-20-140707_add_update_kind_to_processed_events_table/: down.sql  up.sql
migrations/2024-12-20-143511_update_date_columns_to_timestamp/: down.sql  up.sql
src/: company_house_apis.rs  company_house_response_types.rs  jobs.rs  lib.rs  main.rs  model.rs  models.rs  postgres.rs  postgres_types.rs  pulsar.rs  schema.rs  types.rs  worker.rs  workers.rs
src/company_house/: company_house_apis.rs  company_house_response_types.rs  company_house_streaming_client.rs  company_house_streaming_types.rs  company_house_types.rs  mod.rs
src/jobs/: jobs.rs  mod.rs  relation_jobs.rs  risk_jobs.rs  streaming_update_jobs.rs
src/open_sanctions/: api.rs  mod.rs  types.rs
src/workers/: company_streaming_worker.rs  entity_relation_worker.rs  mod.rs  monitored_update_worker.rs  risk_worker.rs  streaming_worker.rs  worker.rs
