[package]
name = "Company-Investigation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5.1"
reqwest = { version = "0.12.8", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.9"
pulsar = "4.1.1"
log = "0.4.6"
futures = "0.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid" ] }
failure = "0.1.8"
lazy_static = "1.5.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]