[package]
name = "Company-Investigation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5.1"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
pulsar = "4.1.1"
log = "0.4.6"
futures = "0.3"
failure = "0.1.8"
lazy_static = "1.5.0"
actix-web = "4.0"
diesel = { version = "2.2.5", features = ["postgres", "uuid", "chrono"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
actix-cors = "0.7.0"
governor = "0.8.0"
tokio-util = "0.7.13"

[dependencies.uuid]
version = "1.11.0"
features = [
    "serde",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
